--- a/files/config.json
+++ b/files/config.json
@@ -1,6 +1,6 @@
 {
   "Captcha Stuff": {
-    "Captcha Service": "capmonster",
+    "Captcha Service": "2captcha",
     "Captcha Service ApiKey": "",
     "Site Key": "f5561ba9-8f1e-40ca-9b5b-a0b3f719ef34"
   },
