New Setting in phone Stuff Part
You are now able to choose between the Phone Service (5sim is not fully implemented yet and you can only use onlinesim)

--- a/files/config.json
+++ b/files/config.json
@@ -6,7 +6,8 @@
   },
 
   "Phone Stuff": {
+    "Phone Service": "onlinesim",
     "Phone Service ApiKey": "",
-    "Phone Country ID": "7"
+    "Phone Country ID": "7",
   }
 }
