--- a/files/config.json
+++ b/files/config.json
@@ -8,6 +8,6 @@
   "Phone Stuff": {
     "Phone Service": "onlinesim",
     "Phone Service ApiKey": "",
-    "Phone Country ID": "7",
+    "Phone Country ID": "7"
   }
 }
