--- a/new version/config.json
+++ b/new version/config.json
@@ -2,7 +2,7 @@
     "CAPTCHA STUFF": {
         "SERVICE": 2,
         "API KEY": "",
-        "SITE KEY": ""
+        "SITE KEY": "f5561ba9-8f1e-40ca-9b5b-a0b3f719ef34"
 
     },
 
