--- a/new version/config.json
+++ b/new version/config.json
@@ -15,9 +15,9 @@
             "COUNTRY" : "phillipines"
         },
     
-        "ONLINESIM": {
+        "FIVESIM": {
             "API KEY": "",
-            "COUNTRY": "372"
+            "COUNTRY": "russia"
         }
     },
 
